Changelog for Poi
=================

    (name of developer listed in brackets)

Poi branch maurits-inline-response-adding
-----------------------------------------

- Add provider:poi.response.add that gives you a form for adding a
  response when viewing an issue.
  [maurits]

- Add browser view @@create_response that creates a response in the
  current issue, based on the request form.
  [maurits]


Poi 1.2 - (Unreleased)
----------------------

- Use event handlers for keeping the SearchableText of an issue in
  sync with its responses.  This comes in place of the updateResponses
  method of an issue that was called by poi_response_update_issue.cpy.
  [maurits]

- Eggification: Poi/trunk has been moved to
  Products.Poi/trunk/Products/Poi
  [maurits]

- Modernization of trackers:

  o Add browser view @@issuefolder that handles the part of PoiTracker
    that involves being just a folder with issues.

  o Move getFilteredIssues, getIssueSearchQueryString and
    buildIssueSearchQuery from PoiTracker to browser view.

  o Remove skins/Poi/getOrphanedIssues.py and skins/Poi/getMyIssues.py.
    Put equivalents in the browser view.

  [maurits]

- Move getNumberFromString, linkBugs and linkSvn from
  content/PoiTracker.py into new utils.py as they need no context.
  [maurits]

- Memoize the getTagged* values for intelligenttext fields in PoiIssue
  and PoiResponse; clear them when setting those fields.  This speeds
  up viewing an issue or response.
  [maurits]

- Modernize code:
  - Cleanup imports with pyflakes.
  - use logging instead of zLOG.
  [maurits]

- Do not try to apply a CustomizationPolicy.
  [maurits]

- Remove backwards compatibility code for old CMFCore permissions.
  [maurits]

- Remove references to contentmigration, as this was only needed for
  migrations from 1.0 beta 2 to 1.0 rc 1.
  [maurits]

- Remove UML model as we do not use that anymore.
  [maurits]


Poi 1.1.1 - (Unreleased)
------------------------

