@@ -1,5 +1,27 @@
 <div class="response-adder"
      i18n:domain="Poi">
+  <h3>Current new-style responses</h3>
+  <ul>
+    <li tal:repeat="response view/responses">
+      <div class="response-info">
+        <span i18n:translate="poi_added_by">Added by</span>
+        ...
+        <!--span class="contact-user" 
+              tal:content="python:here.poi_niceName(username=response.Creator())" /-->
+        <span i18n:translate="poi_added_on">on</span>
+        ...
+        <!--span class="contact-user" 
+              tal:content="python:here.toLocalizedTime(response.Date(), long_format=True)" /-->
+        <div tal:repeat="delta response/changes">
+          <span i18n:translate="" tal:content="string:${delta/name}" />:
+          <span class="issueChange" i18n:translate="" tal:content="delta/before" /> &rarr; <span class="issueChange" i18n:translate="" tal:content="delta/after" />
+        </div>
+
+      </div>
+      <span tal:replace="response/text" />
+    </li>
+  </ul>
+
   <h3>Add response</h3>
   <form method="post" action="@@create_response">
 
